# fin-kit

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.githooks/: pre-commit
.github/: sanitizer-blacklist.txt  sanitizers.cmake
.github/actions/setup-deps/: action.yml
.github/workflows/: main.yml
benchmarks/: CMakeLists.txt  bench_framework.c  bench_framework.h  bench_main.c  bench_matrix.c
benchmarks/codec/: CMakeLists.txt  bench_codec.c  bench_fix_codec.c
benchmarks/matrix/: bench_decompose.c  bench_gemm.c  bench_gemv.c  bench_matrix.c  bench_solve.c  bench_transpose.c  bench_tridiag.c  bench_vector_ops.c
broker/: broker_orderbook.go  broker_orderbook_test.go  go.mod  go.sum  market_adapter.go  market_adapter_test.go  metrics.go  publisher.go  publisher_test.go  snapshot.go  snapshot_test.go  types.go  validator.go  validator_test.go
ci/: sanitizers.cmake
cmake/: CompilerFlags.cmake  DetectSIMD.cmake  InstallConfig.cmake  version.h.in
cmake/toolchain/: aarch64-apple-darwin.cmake  x86_64-pc-linux-gnu.cmake  x86_64-w64-mingw32.cmake
exchange/: exchange_test.go  go.mod  go.sum  matching_engine.go  order_matcher.go  order_type.go  orderbook.go  orderbook_test.go  self_trade.go  trade_report.go
go/: cgo_prebuilt.go  cgo_source.go  fin-kit.go  go.mod  go.sum
go/codec/: codec.go  fix_codec.go
go/fin-kit/: cgo_prebuilt.go  cgo_source.go  fin-kit.go  fin_kit.h  fin_kit_cgo.c  fin_kit_cgo_prebuilt.go  fin_kit_cgo_source.go  fin_kit_prebuilt.c  fin_kit_source.c.h  fin_kit_test.go
go/fin-kit/codec/: cgo.go  codec.go  codec_test.go
go/fin-kit/matrix/: cgo.go  matrix.go
go/fin-kit/platform/: cgo.go  platform.go
go/matrix/: decompose.go  decompose_test.go  gemm.go  gemm_test.go  gemv.go  gemv_test.go  matrix.go  matrix_test.go  solve.go  solve_test.go  transpose.go  transpose_test.go  tridiag.go  tridiag_test.go  vector_ops.go  vector_ops_test.go
go/platform/: platform.go
hft/: go.mod  go.sum  hft_orderbook.go  hft_orderbook_test.go  imbalance.go  liquidity.go  position.go  risk.go  signal.go  types.go
include/: CMakeLists.txt  fin-kit.h  version.h
include/codec/: codec.h  fix_codec.h
include/fin-kit/: fin-kit.h  matrix.h  version.h
include/fin-kit/codec/: codec.h  fix_codec.h
include/fin-kit/matrix/: matrix.h  matrix_internal.h
include/matrix/: decompose.h  gemm.h  gemv.h  matrix.h  matrix_internal.h  solve.h  transpose.h  tridiag.h  vector_ops.h
include/platform/: error.h
scripts/: build.sh  generate_reference.py  run_benchmarks.sh  test_coverage.sh
src/codec/: CMakeLists.txt  fix_codec.c
src/matrix/: CMakeLists.txt  decompose.c  gemm_avx2.c  gemm_avx512.c  gemm_dispatch.c  gemm_scalar.c  gemm_sse42.c  gemv.c  solve.c  transpose.c  tridiag.c  vector_ops.c
src/platform/: CMakeLists.txt  error.c  error.h  fc_init.c  mem_aligned.c  platform.h  platform_linux.c  platform_macos.c  platform_win.c  simd_detect.c  simd_detect.h
tests/: CMakeLists.txt  test_framework.c  test_framework.h  test_main.c  test_matrix.c  test_precision.c
tests/codec/: test_codec.c  test_fix_codec.c
tests/matrix/: test_decompose.c  test_gemm.c  test_gemv.c  test_matrix.c  test_precision.c  test_solve.c  test_transpose.c  test_tridiag.c  test_vector_ops.c
